--- a/src/renderer/assets/styles/components/combobox.scss
+++ b/src/renderer/assets/styles/components/combobox.scss
@@ -45,7 +45,7 @@
     background: transparent!important;
     color: var(--field-text-color);
     height: 24px;
-    padding: 0 5px 0 40px;
+    padding: 0 5px 0 30px;
     vertical-align: middle;
     border: none;
     width: 320px;
