--- a/src/renderer/assets/styles/global.scss
+++ b/src/renderer/assets/styles/global.scss
@@ -375,6 +375,7 @@ nav + nav + .breadcrumb + .main {
     .emptyLibraryIcon {
       top: 20px;
       left: -20px;
+      color: var(--color-blue);
     }
   }
 
