--- a/src/renderer/assets/styles/partials/variables.scss
+++ b/src/renderer/assets/styles/partials/variables.scss
@@ -16,6 +16,7 @@ $color-palette: (
     --color-mediumdark-grey: #2D2D2D,
     --color-mediumdark-grey-alt: #2D2D2D,
     --color-dark-grey: #1E1E1E,
+    --color-dark-grey-alt: #1E1E1E,
     --color-accent: #00BCD4,
     --color-accent-contrast: #fff,
     --reader-fontColor: #000,
@@ -28,6 +29,7 @@ $color-palette: (
     --color-appName: #AFB1B6,
     --color-annotations-txt: #f5f5f5,
     --color-annotations-bg: #fff,
+    --color-button-hover: #fff,
   ),
   dark: (
     --color-primary: #e7eaf8,
@@ -43,6 +45,7 @@ $color-palette: (
     --color-mediumdark-grey: #2D2D2D,
     --color-mediumdark-grey-alt: #d9d9d9,
     --color-dark-grey: #1E1E1E,
+    --color-dark-grey-alt: #7c7d86,
     --color-accent: #00BCD4,
     --color-accent-contrast: #fff,
     --reader-fontColor: #000,
@@ -55,6 +58,7 @@ $color-palette: (
     --color-appName: #EAEAEA,
     --color-annotations-txt: #3b3c3f,
     --color-annotations-bg: #2D2D2D,
+    --color-button-hover: #48484b,
 
   /*
     --color-primary: #fff,
